--- a/BitsoBookModule/Sources/Resources/Localizable.strings
+++ b/BitsoBookModule/Sources/Resources/Localizable.strings
@@ -6,4 +6,4 @@
 // MARK: - Wallet List
 
 "BOOK_LIST_EMPTY_RESULT_MESSAGE" = "We could not find any books.";
-"BOOK_LIST_ERROR_MESSAGE" = "Something went wrong."
+"BOOK_LIST_ERROR_MESSAGE" = "Something went wrong.";
