--- a/BitsoBookModule/Sources/Resources/Localizable.strings
+++ b/BitsoBookModule/Sources/Resources/Localizable.strings
@@ -2,8 +2,14 @@
 // MARK: - Common
 
 "OOPS" = "Oops!";
+"GENERIC_ERROR_MESSAGE" = "Something went wrong.";
 
-// MARK: - Wallet List
+// MARK: - Book List
 
 "BOOK_LIST_EMPTY_RESULT_MESSAGE" = "We could not find any books.";
-"BOOK_LIST_ERROR_MESSAGE" = "Something went wrong.";
+
+// MARK: - Book Card
+
+"MINIMUM" = "Min.";
+"MAXIMUM" = "Min.";
+
